k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: inkit
  labels:
    app.kubernetes.io/name: inkit
