k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inkit
  namespace: inkit
  labels:
    app.kubernetes.io/name: inkit
spec:
  selector:
    app.kubernetes.io/name: inkit
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
